--- a/src/main/resources/META-INF/v1_myorder.properties
+++ b/src/main/resources/META-INF/v1_myorder.properties
@@ -1,5 +1,12 @@
+# CreateUserDto #
 user.create.id=Id do usuário
 user.create.name=Nome
 user.create.email=Email
 user.create.password=Senha
 user.create.address=Endereço
+user.create.phone=Telefone
+
+# CreateProductDto #
+product.create.name=Nome do produto
+product.create.value=Valor do produto
+product.create.restaurantId=Id do restaurante associado
